--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav><%= render 'layouts/nav' %></nav>
+  <nav class="top-bar"><%= render 'layouts/nav' %></nav>
 
 <%= yield %>
 
