--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -1,5 +1,8 @@
 %h1 New Exam Page
-
-#exam_form
-
-#question_form
+= form_for @exam do |f|
+  = f.label :exam_name
+  = f.text_field :name
+  = f.fields_for :questions do |builder|
+    = builder.label :text
+    = builder.text_area :text
+  = f.submit 'submit'
