--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,5 @@
 /*
  *= require 'jquery-ui/css/ui-lightness/jquery-ui-1.10.2.custom.min.css'
+ *= require 'morris/morris.css'
  *= require 'style'
  */
