--- a/app/views/exams/show.html.haml
+++ b/app/views/exams/show.html.haml
@@ -1,9 +1,11 @@
-=form_tag submit_exam_path do
-  -@exam.questions.each do |question|
-    %p= question.text
-    -@responses.select{|x| x.question == question}.each do |response|
-      %span
-        =label_tag(response.choice.text)
-        =check_box_tag("#{question.id}[]", response.id)
-  %br
-  =submit_tag
+.row
+  .small-8.small-centered.columns
+    =form_tag submit_exam_path do
+    -@exam.questions.each do |question|
+      %p= question.text
+      -@responses.select{|x| x.question == question}.each do |response|
+        %span
+          =label_tag(response.choice.text)
+          =check_box_tag("#{question.id}[]", response.id)
+    %br
+    =submit_tag
