--- a/app/views/exams/_form.html.haml
+++ b/app/views/exams/_form.html.haml
@@ -13,3 +13,4 @@
   = label_tag 'Tags'
   = text_field_tag 'tags'
   = f.submit nil, class: 'button'
+  = link_to('Cancel', "#", id: 'cancel', class: 'button alert')
