--- a/app/views/notifications/exam_taken.html.haml
+++ b/app/views/notifications/exam_taken.html.haml
@@ -1,9 +1,12 @@
-%h3 Thanks for using Interviewr
+%h3= "Thank for taking #{@run.exam.name}!"
 
-%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, doloremque illo et error quis autem natus fugit voluptatum explicabo tenetur esse laudantium sunt totam. Nobis, qui dignissimos placeat odio dolor.
+%p= "Dear #{@user.first},"
 
-%p{ style: 'color:red'} Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+%p{ style: 'color:red'}= "Your final score was #{@run.score}%"
 
-%p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, doloremque illo et error quis autem natus fugit voluptatum explicabo tenetur esse laudantium sunt totam. Nobis, qui dignissimos placeat odio dolor.
+%p= "You answered #{@run.right_responses} right and #{@run.wrong_responses} wrong, out of #{@run.exam.questions.length}."
+
+%p Thanks,
+%p Interviewr Team
 
 / Notifications.exam_taken('x').deliver
