--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -1,6 +1,8 @@
 %h1 This is a Dummy Exams Index Page
+%table
 - @exams.each do |exam|
-  %div
-    = exam.name
-    =link_to "Buy Exam", nil
+  %tr{:style=>"background-color:#{cycle('black','gray')};"}
+  = form_tag purchase_exam(exam.id), :remote=>true do
+    %td= exam.name
+    %td= submit_tag "Buy Now", :class=>'button tiny radius alert'
 
