--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,36 +1,13 @@
+#user_info
+  = render 'info'
 .row
   .small-12.columns
-    %h1= "#{@user.first}'s Profile"
-.row
-  .small-3.columns
-    = image_tag @user.image.thumb.url
-    - if @user.address.present?
-      #map_canvas
-      %script
-        = "gmap.display_map(#{@user.lat}, #{@user.lon}, 13);"
-  .small-9.columns
-    %table#info
-      %tr
-        %td Name
-        %td= "#{@user.first} #{@user.last}"
-      %tr
-        %td Address
-        %td= @user.address
-      %tr
-        %td Occupation
-        %td= @user.occupation
-      %tr
-        %td Email
-        %td= @user.email
-      %tr
-        %td Phone
-        %td= @user.phone
-      %tr
-        %td Balance
-        %td= number_to_currency(@user.balance)
+    %h3 My Exams
+    %ul#exams
+      - @user.my_exams.each do |exam|
+        %li= link_to exam.name, exam
 .row
   .small-12.columns
-    %h3 My Interviews
-.row
-  .small-12.columns
-    %h3 Interviews Taken
+    %h3 Exams Taken
+#edit_user.reveal-modal
+  %a.close-reveal-modal ×
