--- a/app/views/exams/_exams.html.haml
+++ b/app/views/exams/_exams.html.haml
@@ -1,10 +1,11 @@
 .large-10.columns.large-centered
   %h3 My Exams
   - Exam.all.each do |exam|
-    %p
-      %strong= exam.name
+    %fieldset
+      %legend= exam.name
       = exam.tags.map(&:name).join(', ')
-      - exam.questions.each do |question|
-        = question.text
+      - exam.questions.each_with_index do |question, i|
+        %p= "#{i + 1}. #{question.text}"
         - question.choices.each do |choice|
-          = choice.text
+          %p= "#{i + 1}. #{choice.text}"
+
