--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -16,14 +16,24 @@
   height: 200px;
 }
 
-#exams li {
+#my_exams li {
   list-style: none;
 }
 
-#exams a {
+#my_exams a {
   font-weight: bold;
 }
 
 span label {
   display: inline-block;
+}
+
+#taken_exams {
+  width: 100%;
+  text-align: center;
+}
+
+#user_chart {
+  width: 100%;
+  height: 500px;
 }
