--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -5,6 +5,8 @@
   =f.text_field :last
   =f.label :email
   =f.text_field :email
+  =f.label :phone, 'Phone Number'
+  =f.text_field :phone
   =f.label :password
   =f.password_field :password
   =f.label :password_confirmation
