--- a/app/views/users/_info.html.haml
+++ b/app/views/users/_info.html.haml
@@ -4,10 +4,6 @@
 .row
   .small-3.columns
     = image_tag @user.image.url
-    - if @user.address.present?
-      #map_canvas
-      %script
-        = "gmap.display_map(#{@user.lat}, #{@user.lon}, 13);"
   .small-9.columns
     %table#info
       %tr
@@ -30,3 +26,9 @@
         %td= number_to_currency(@user.balance)
     - if @user = @auth
       = link_to 'Edit Profile', edit_user_path, :remote => true, :class => 'button small'
+.row
+  .small-12.columns
+    - if @user.address.present?
+      #map_canvas
+        %script
+          = "gmap.display_map(#{@user.lat}, #{@user.lon}, 13);"
