--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -1,8 +1,6 @@
 %ul.title-area
   %li.name
-    %h1
-      %a{:href => "#"}
-        Interviewr
+    %h1= link_to 'Interviewr', root_path
   %li.toggle-topbar.menu-icon
     %a{:href => "#"}
       %span menu
