--- a/app/views/home/_search_results.html.haml
+++ b/app/views/home/_search_results.html.haml
@@ -1,20 +1,16 @@
-
-.row.large-6.columns
-  %table
+%table
+  %tr
+    %th Exam
+    %th Fee
+    %th Pass rate
+    %th Number of passes
+    %th Number of fails
+    %th Owner
+  - @exams.each do |exam|
     %tr
-      %th
-        %td
-          - @exams.each do |exam|
-            = exam.name
-            = link_to(exam.name, exam, :remote => true, :class => 'button tiny radius secondary')
-          - @questions.each do |question|
-            = question.text
-          - @choices.each do |choice|
-            = choice.text
-            %br
-          - @tags.each do |tag|
-            = tag.name
-.large-6.columns
-
-/ find.User(where).creator_id == user.id
-/ find tests which are free
+      %td= link_to(exam.name, exam, :class => 'button tiny radius secondary')
+      %td= exam.cost
+      %td= exam.pass_rate
+      %td= exam.runs.select{|x| x.passed? == true}.count
+      %td= exam.runs.select{|x| x.passed? != true}.count
+      %td= User.find(exam.creator_id).first
