--- a/app/views/home/search.js.erb
+++ b/app/views/home/search.js.erb
@@ -1,1 +1,1 @@
-$('#search_results').empty().append('<%=j render :partial => 'search_results' %>');
+$('#exams').empty().append('<%=j render :partial => 'search_results' %>');
