--- a/app/views/notifications/purchased.html.haml
+++ b/app/views/notifications/purchased.html.haml
@@ -1,3 +1,3 @@
 %h1 Thank you for your purchase!
-%h2= "Exam: #{@run.exam.title}"
+%h2= "Exam: #{@run.exam.name}"
 %h3= "You have been charged #{number_to_currency(@run.exam.cost)}"
