--- a/app/views/home/_search_results.html.haml
+++ b/app/views/home/_search_results.html.haml
@@ -6,12 +6,13 @@
     %th Number of passes
     %th Number of fails
     %th Owner
-  - @exams.each do |exam|
-    %tr
-      %td= link_to(exam.name, exam, :class => 'button tiny radius secondary')
-      %td= exam.cost
-      %td= exam.pass_rate
-      %td= exam.runs.select{|x| x.passed? == true}.count
-      %td= exam.runs.select{|x| x.passed? != true}.count
-      %td= User.find(exam.creator_id).first
+    - if @exams.present?
+      - @exams.each do |exam|
+        %tr
+          %td= link_to(exam.name, exam, :class => 'button tiny radius secondary')
+          %td= exam.cost
+          %td= exam.pass_rate
+          %td= exam.runs.select{|x| x.passed? == true}.count
+          %td= exam.runs.select{|x| x.passed? != true}.count
+          %td= User.find(exam.creator_id).first
 
