made changes to the make exams page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -27,3 +27,22 @@
 span label {
   display: inline-block;
 }
+
+#questions li{
+  list-style-type: decimal;
+}
+
+#choices li{
+  list-style-type: lower-latin;
+  margin-left: 10px
+}
+
+// .ui-accordion-content {
+//   border: none;
+//   background: none;
+// }
+
+// .ui-accordion-header{
+//   border: none;
+//   background: none;
+// }
