--- a/app/views/users/update.js.erb
+++ b/app/views/users/update.js.erb
@@ -1,6 +1,10 @@
 <% if @user.valid? %>
-  $('#edit_user').foundation('reveal', 'close')
+  console.log('<%= @user.first %>');
+  console.log('<%= @user.lat %>');
+  console.log('<%= @user.lon %>');
+  $('#edit_user').foundation('reveal', 'close');
   $('#user_info').empty().append('<%=j render :partial => 'users/info' %>');
+  gmap.display_map('<%= @user.lat %>', '<%= @user.lon %>', 12);
 <% else %>
   $('#edit_user').empty().append('<%=j render :partial => 'users/longform' %>');
 <% end %>
