writing tests for exams_spec.rb

--- a/app/views/home/_search_results.html.haml
+++ b/app/views/home/_search_results.html.haml
@@ -2,13 +2,13 @@
   %tr
     %th
     %th Exam
-    %th Fee
+    %th Cost
     %th Pass rate
     %th Number of passes
     %th Number of fails
     %th Owner
-    - if Exam.present?
-      - @exams = Exam.all
+    - @exams = Exam.all
+    - if @exams.present?
       - @exams.each do |exam|
         %tr
           %td
