exams_spec.rb checks for stripe credit card modals

--- a/app/views/exams/create.js.erb
+++ b/app/views/exams/create.js.erb
@@ -1,3 +1,4 @@
+alert('got here');
 $('#exams').empty().append('<%=j render 'search_results' %>');
 
 // $('#exams').empty().append('<%=j render 'exams/exams' %>');
