--- a/app/views/home/_search_results.html.haml
+++ b/app/views/home/_search_results.html.haml
@@ -22,12 +22,13 @@
                 :class => "stripe-button",
                 :'data-label' => exam.name,
                 :'data-amount' => (exam.cost * 100).to_i,
-                :'data-key' => Rails.configuration.stripe[:publishable_key]}
+                :'data-key' => Rails.configuration.stripe[:publishable_key],
+                :'id' => "#{exam.id}"}
               = form_tag purchase_exam_path(exam), :remote=>true do end
           %td= exam.name
           %td= number_to_currency(exam.cost)
           %td= exam.pass_rate
           / %td= exam.runs.select{|x| x.passed? == true}.count if exam.runs.present?
           / %td= exam.runs.select{|x| x.passed? != true}.count if exam.runs.present?
-          %td= User.find(exam.creator_id).first
+          / %td= User.find(exam.creator_id).first
 
