--- a/app/views/choices/_choice_fields.html.haml
+++ b/app/views/choices/_choice_fields.html.haml
@@ -1,7 +1,10 @@
 .fields
+  %hr
   = f.label :answer_text
   = f.text_field :text
-  = f.label 'correct'
+  = f.label 'correct', :style => "display: inline-block;"
   = f.check_box :correct
+  %br
   = f.hidden_field :_destroy
-  %p= link_to 'Remove answer', '#', :class => 'remove_fields'
+  = link_to 'Remove answer', '#', :class => 'remove_fields'
+  %hr
