--- a/app/views/exams/show.html.haml
+++ b/app/views/exams/show.html.haml
@@ -1,19 +1,20 @@
-.row
-  .small-12.columns
-    %h3= @exam.name
-.row
-  .small-8.small-centered.columns#show_body
-    =form_tag submit_exam_path, :remote => true do
-      %fieldset
-        %legend= "#{@exam.name}"
+#exam_show
+  .row
+    .small-12.columns
+      %h3= @exam.name
+  .row
+    .small-8.small-centered.columns#show_body
+      =form_tag submit_exam_path, :remote => true do
         -@exam.questions.each_with_index do |question, i|
-          %p= "#{i+1}. #{question.text}"
-          -(@responses.select{|x| x.question == question}).each do |response|
-            %span
-              =check_box_tag("#{question.id}[]", response.id)
-              =label_tag(response.choice.text)
-              %br
-          %br
+          .question
+            %p= "#{i+1}. #{question.text}"
+            -(@responses.select{|x| x.question == question}).each do |response|
+              %span.responses
+                =check_box_tag("#{question.id}[]", response.id)
+                =label_tag(response.choice.text)
+                %br
+            %br
 
         %br
-        =submit_tag
+        #submit
+          =submit_tag "Submit", :class => "button radius"
