--- a/app/views/questions/_question_fields.html.haml
+++ b/app/views/questions/_question_fields.html.haml
@@ -1,8 +1,9 @@
 .fields
-  = f.label :question_text
-  = f.text_area :text
-  = f.hidden_field :_destroy
-  = link_to 'Remove Question', '#', :class => 'remove_fields'
-  = f.fields_for :choices do |builder|
-    = render partial: 'choices/choice_fields', locals: { :f => builder}
-  = link_to_add_fields 'Add answer', f, :choices
+  %fieldset
+    = f.label :question_text
+    = f.text_area :text
+    = f.hidden_field :_destroy
+    = link_to 'Remove Question', '#', :class => 'remove_fields'
+    = f.fields_for :choices do |builder|
+      = render partial: 'choices/choice_fields', locals: { :f => builder}
+    %p= link_to_add_fields 'Add answer', f, :choices
