--- a/app/views/users/_longform.html.haml
+++ b/app/views/users/_longform.html.haml
@@ -1,4 +1,4 @@
-=form_for @user, :html => {:multipart => true}, :remote => true do |f|
+=form_for @user do |f|
   =f.label :first, 'First Name'
   =f.text_field :first
   =f.label :last, 'Last Name'
