--- a/app/views/exams/create.js.erb
+++ b/app/views/exams/create.js.erb
@@ -1,3 +1,6 @@
-$('#exams').empty().append('<%=j render 'exams/exams' %>');
+alert('got here');
+$('#exams').empty().append('<%=j render 'search_results' %>');
+
+// $('#exams').empty().append('<%=j render 'exams/exams' %>');
 $('.exam_form_partial').slideUp();
 $('#exam_button').show()
